@startuml

title __SRC's Class Diagram__\n

  package  {
    class Airplane {
        + planeToCapacity : HashMap<String, Integer>
        + Airplane()
        + translate()
        + add()
        + getHashMap()
        + printPlanes()
        + printPlaneInfo()
    }
  }
  

  package  {
    class Flight {
        + planeID : String
        + departure : String
        + destination : String
        + list : ArrayList<Flight>
        + Flight()
        + Flight()
        + addNewFlight()
        + printFlights()
    }
  }
  

  package  {
    class Main {
        {static} + main()
    }
  }
  

  package  {
    class UserInterface {
        - scan : Scanner
        + UserInterface()
        + start()
        + flightService()
        + flightServicePanel()
        + panel()
        + addAirplane()
        + addFlight()
    }
  }
  

  Flight o-- Airplane : plane
  UserInterface o-- Airplane : plane
  UserInterface o-- Flight : flight


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
